--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="more_info">More Info</string>
+    <string name="pokemon_desc">Pokemon Description</string>
+    <string name="close">Close</string>
 </resources>
