--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="more_info">More Info</string>
     <string name="pokemon_desc">Pokemon Description</string>
     <string name="close">Close</string>
+    <string name="not_found">no matches</string>
 </resources>
